@@ -40,9 +40,18 @@ sub handler
 	my $page=$session->make_doc_fragment();
 	$page->appendChild( input_form( $session, $problems ) );
 
+        my $cookie = EPrints::Apache::AnApache::cookie( $r, "eprints_session" );
+	my %opts = ();
+	if( !defined $cookie )
+	{
+		my @a = ();
+		for(1..16) { push @a, sprintf( "%02X",int rand 256 ); }
+		$opts{code} = join( "", @a );
+	}
+
 	my $title = $session->make_text( "Login" );
 	$session->build_page( $title, $page, "login" );
-	$session->send_page;
+	$session->send_page( %opts );
 	$session->terminate;
 
 	return DONE;
