@@ -14,7 +14,8 @@ sub render
 	{
 		$surround->appendChild( $self->{session}->make_element( "a", name=>$field_id ) );
 	}
-	if( $component->get_internal_button && (scalar @{$component->{stage}->{components}} > 1) )
+	my $int_id = $component->get_internal_value_id;
+	if( defined $int_id && $int_id !~ m/spaces$/ && (scalar @{$component->{stage}->{components}} > 1) )
 	{
 		$surround->appendChild( $self->{session}->make_element( "a", name=>"t" ) );
 	}
