@@ -37,6 +37,13 @@ sub properties_from
 
 }
 
+sub redirect_to_me_url
+{
+	my( $self ) = @_;
+
+	return $self->{processor}->{url}."?screen=".$self->{processor}->{screenid};
+}
+
 sub render
 {
 	my( $self ) = @_;
