@@ -139,6 +139,13 @@ sub action_next
 	$self->workflow->next;
 }
 
+
+sub redirect_to_me_url
+{
+	my( $self ) = @_;
+
+	return $self->SUPER::redirect_to_me_url.$self->workflow->get_state_params;
+}
 	
 
 
