@@ -148,6 +148,12 @@ sub render
 }
 
 
+sub redirect_to_me_url
+{
+	my( $self ) = @_;
+
+	return $self->SUPER::redirect_to_me_url.$self->workflow->get_state_params;
+}
 
 sub render_buttons
 {
