@@ -173,6 +173,13 @@ sub render_buttons
 	return $self->{session}->render_action_buttons( %buttons );
 }
 
+sub redirect_to_me_url
+{
+	my( $self ) = @_;
+
+	return $self->SUPER::redirect_to_me_url.$self->workflow->get_state_params;
+}
+
 1;
 
 
